--- a/ReSharperFixieTestProvider/ReSharperFixieTestProvider.csproj
+++ b/ReSharperFixieTestProvider/ReSharperFixieTestProvider.csproj
@@ -50,11 +50,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppDomainWrapper.cs" />
     <Compile Include="AssemblyRegistration.cs" />
-    <Compile Include="FixieConventionDomainLoader.cs" />
     <Compile Include="FixieConventionLoader.cs" />
     <Compile Include="FixieConventionCheck.cs" />
+    <Compile Include="ITestFinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Actions\AboutAction.cs" />
     <Compile Include="Elements\FixieTestMethodElement.cs" />
