--- a/ReSharperFixieTestProvider/FixiePlugin.csproj
+++ b/ReSharperFixieTestProvider/FixiePlugin.csproj
@@ -1,17 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\JetBrains.ReSharper.SDK.8.0.1243\build\JetBrains.ReSharper.SDK.Props" Condition="Exists('..\packages\JetBrains.ReSharper.SDK.8.0.1243\build\JetBrains.ReSharper.SDK.Props')" />
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1B9E9E83-3C32-403B-B5F4-E7924E406EC5}</ProjectGuid>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
+    <ProjectGuid>{CD40B14D-A440-47D3-B48D-A6B31DF6D680}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ReSharperFixieTestRunner</RootNamespace>
-    <AssemblyName>ReSharperFixieTestRunner</AssemblyName>
+    <RootNamespace>FixiePlugin</RootNamespace>
+    <AssemblyName>FixiePlugin</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
@@ -20,9 +22,11 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;JET_MODE_ASSERT</DefineConstants>
+    <DefineConstants>JET_MODE_ASSERT;DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -32,39 +36,60 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Fixie">
-      <HintPath>..\packages\Fixie.0.0.1.106\lib\net45\Fixie.dll</HintPath>
-    </Reference>
-    <Reference Include="JetBrains.ReSharper.TaskRunnerFramework, Version=8.0.14.856, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\JetBrains.ReSharper.SDK.8.0.1243\bin\JetBrains.ReSharper.TaskRunnerFramework.dll</HintPath>
-    </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppDomainWrapper.cs" />
+    <Compile Include="AssemblyRegistration.cs" />
+    <Compile Include="Tasks\TestAssemblyTask.cs" />
+    <Compile Include="Tasks\TestClassTask.cs" />
+    <Compile Include="Tasks\TestMethodTask.cs" />
+    <Compile Include="TestDiscovery\ConventionFinder.cs" />
+    <Compile Include="TestDiscovery\TestIdentifier.cs" />
+    <Compile Include="TestDiscovery\ITestFinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Actions\AboutAction.cs" />
+    <Compile Include="Elements\TestMethodElement.cs" />
+    <Compile Include="TestDiscovery\ConventionInfo.cs" />
+    <Compile Include="Convention\ConventionTestClass.cs" />
+    <Compile Include="Convention\ConventionTestMethod.cs" />
+    <Compile Include="TestElementSerializer.cs" />
+    <Compile Include="TestMetadataExplorer.cs" />
+    <Compile Include="Elements\ISerializableUnitTestElement.cs" />
+    <Compile Include="PsiUnitTestIdentifier.cs" />
+    <Compile Include="TestDiscovery\DeclaredElementProvider.cs" />
+    <Compile Include="Elements\BaseElement.cs" />
+    <Compile Include="TestDiscovery\PsiFileExplorer.cs" />
+    <Compile Include="Elements\TestClassElement.cs" />
+    <Compile Include="TestFileExplorer.cs" />
+    <Compile Include="TestProvider.cs" />
+    <Compile Include="Tasks\AttributeNames.cs" />
+    <Compile Include="TestRun\IException.cs" />
+    <Compile Include="TestRun\IRemoteRunner.cs" />
+    <Compile Include="TestRun\ITestResult.cs" />
+    <Compile Include="TestRun\NodeRunner.cs" />
+    <Compile Include="TestRun\TaskRunner.cs" />
+    <Compile Include="TestRun\TestSetup.cs" />
+    <Compile Include="UnitTestElementFactory.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Actions\Actions.xml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\JetBrains.ReSharper.SDK.8.0.1243\build\JetBrains.ReSharper.SDK.Targets" Condition="Exists('..\packages\JetBrains.ReSharper.SDK.8.0.1243\build\JetBrains.ReSharper.SDK.Targets')" />
-  <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
