--- a/RemoteTestFinder/RemoteTestFinder.csproj
+++ b/RemoteTestFinder/RemoteTestFinder.csproj
@@ -37,20 +37,16 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestFinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ReSharperFixieTestProvider\ReSharperFixieTestProvider.csproj">
+    <ProjectReference Include="..\ReSharperFixieTestProvider\FixiePlugin.csproj">
       <Project>{cd40b14d-a440-47d3-b48d-a6b31df6d680}</Project>
-      <Name>ReSharperFixieTestProvider</Name>
+      <Name>FixiePlugin</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
