--- a/resharperfixierunner.nuspec
+++ b/resharperfixierunner.nuspec
@@ -20,7 +20,8 @@
     </metadata>
     <files>
         <file src="bin\Release\Fixie.dll" target="ReSharper\v8.0\plugins\Fixie.dll" />
-        <file src="bin\Release\ReSharperFixieTestProvider.dll" target="ReSharper\v8.0\plugins\ReSharperFixieTestProvider.dll" />
-        <file src="bin\Release\ReSharperFixieTestRunner.dll" target="ReSharper\v8.0\plugins\ReSharperFixieTestRunner.dll" />
+        <file src="bin\Release\FixiePlugin.dll" target="ReSharper\v8.0\plugins\FixiePlugin.dll" />
+        <file src="bin\Release\RemoteTestFinder.dll" target="ReSharper\v8.0\plugins\RemoteTestFinder.dll" />
+        <file src="bin\Release\RemoteTestRunner.dll" target="ReSharper\v8.0\plugins\RemoteTestRunner.dll" />
     </files>
 </package>
