--- a/ReSharperFixieTestProvider.Tests/FixiePlugin.Tests.csproj
+++ b/ReSharperFixieTestProvider.Tests/FixiePlugin.Tests.csproj
@@ -57,9 +57,9 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TestDiscovery\FixieTestMetadataExplorerTest.cs" />
+    <Compile Include="TestDiscovery\TestMetadataExplorerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestRun\FixieTaskRunnerTest.cs" />
+    <Compile Include="TestRun\TaskRunnerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
