--- a/FixiePlugin/FixiePlugin.csproj
+++ b/FixiePlugin/FixiePlugin.csproj
@@ -43,6 +43,10 @@
   <ItemGroup>
     <Reference Include="JetBrains.Platform.ReSharper.ComponentModel, Version=8.0.14.856, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL" />
     <Reference Include="JetBrains.Platform.ReSharper.DocumentModel, Version=8.0.14.856, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL" />
+    <Reference Include="JetBrains.Platform.ReSharper.Metadata, Version=8.0.14.856, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\JetBrains.ReSharper.SDK.8.0.1243\bin\JetBrains.Platform.ReSharper.Metadata.dll</HintPath>
+    </Reference>
     <Reference Include="JetBrains.Platform.ReSharper.ProjectModel, Version=8.0.14.856, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\JetBrains.ReSharper.SDK.8.0.1243\bin\JetBrains.Platform.ReSharper.ProjectModel.dll</HintPath>
@@ -68,6 +72,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\JetBrains.ReSharper.SDK.8.0.1243\bin\JetBrains.ReSharper.UnitTestFramework.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -81,13 +86,13 @@
     <Compile Include="Tasks\TestAssemblyTask.cs" />
     <Compile Include="Tasks\TestClassTask.cs" />
     <Compile Include="Tasks\TestMethodTask.cs" />
-    <Compile Include="TestDiscovery\ConventionFinder.cs" />
+    <Compile Include="TestDiscovery\LocalTestFinder.cs" />
+    <Compile Include="TestDiscovery\RemoteTestFinder.cs" />
     <Compile Include="TestDiscovery\TestIdentifier.cs" />
-    <Compile Include="TestDiscovery\ITestFinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Actions\AboutAction.cs" />
     <Compile Include="Elements\TestMethodElement.cs" />
-    <Compile Include="TestDiscovery\ConventionInfo.cs" />
+    <Compile Include="TestDiscovery\TestInfo.cs" />
     <Compile Include="Convention\ConventionTestClass.cs" />
     <Compile Include="Convention\ConventionTestMethod.cs" />
     <Compile Include="TestElementSerializer.cs" />
