--- a/FixiePlugin/FixiePlugin.csproj
+++ b/FixiePlugin/FixiePlugin.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Tasks\TestAssemblyTask.cs" />
     <Compile Include="Tasks\TestClassTask.cs" />
     <Compile Include="Tasks\TestMethodTask.cs" />
+    <Compile Include="TestClassPresenter.cs" />
     <Compile Include="TestDiscovery\LocalTestFinder.cs" />
     <Compile Include="TestDiscovery\RemoteTestFinder.cs" />
     <Compile Include="TestDiscovery\TestIdentifier.cs" />
