--- a/FixiePlugin/FixiePlugin.csproj
+++ b/FixiePlugin/FixiePlugin.csproj
@@ -57,6 +57,7 @@
     <Compile Include="AppDomainWrapper.cs" />
     <Compile Include="AssemblyRegistration.cs" />
     <Compile Include="Elements\TestCaseElement.cs" />
+    <Compile Include="RequiredFixieVersion.cs" />
     <Compile Include="Tasks\TestCaseTask.cs" />
     <Compile Include="Tasks\FixieRemoteTask.cs" />
     <Compile Include="Tasks\TestAssemblyTask.cs" />
